fix matchup scrollbar and spell A to Q

--- a/public/styles/characters.css
+++ b/public/styles/characters.css
@@ -347,6 +347,18 @@
 .matchups-wrapper:not(:last-child) {
     padding-bottom: 0px;
 }
+.matchups-wrapper ::-webkit-scrollbar {
+    background-color: hsla(0,0%,100%,0);
+    width: 4px;
+    height: 8px;
+}
+.matchups-wrapper ::-webkit-scrollbar-thumb {
+    background-color: rgba(205,220,254,.25);
+    border-radius: 4px;
+}
+.matchups-wrapper ::-webkit-scrollbar-track {
+    background-color: #11112a;
+}
 .toughest-matchups {
     flex: 1 1;
     margin-top: 24px;
@@ -379,12 +391,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 73px;
+    min-width: 150px;
     padding: 6px 0;
     border-radius: 3px;
     background-color: #11112a;
     color: #fff;
     text-align: center;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
 }
 .character-face {
     position: relative;
